comment console logs

--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ function showMessage(message) {
                     // Prevent default behavior (opening developer tools)
                     event.preventDefault();
                     // Optionally, you can also display a message to the user
-                    console.log('Inspect Element is disabled on this website.');
+                   // console.log('Inspect Element is disabled on this website.');
                 }
             });
 </script>
